# burgerbuspma

./: .gitignore  BBC_REWARDS_SYSTEM_GUIDE.md  FIXED-PAYMENT-FLOW-SUMMARY.md  PRODUCTION_DATABASE_SETUP.md  auth_fix_test.py  backend_test.py  bch_auth_verification_test.py  bitcoin-bens-api-server_20250925_010030.md5  bitcoin-bens-api-server_20250925_010030.sha256  bitcoin-bens-pi5-complete_20250924_232735.md5  bitcoin-bens-pi5-complete_20250924_232735.sha256  create-backend-only-package.sh  create-pi5-package.sh  debug_pma_test.py  deployment-summary.md  focused_test.py  pma_validation_test.py  proper_pma_test.py  registration_fix_test.py  staking_auth_test.py  staking_test.py  test_result.md  web-installer.sh
.emergent/: emergent.yml  summary.txt
backend/: .env  requirements.txt  rewards_treasury.py  server.py
bitcoin-bens-api-server_20250925_010016/: README.md
bitcoin-bens-api-server_20250925_010016/docs/: api-reference.md
bitcoin-bens-api-server_20250925_010016/setup/: install.sh
bitcoin-bens-pi5-complete_20250924_232546/docs/: network-setup.md
bitcoin-bens-pi5-complete_20250924_232546/setup/: setup-pi5.sh
frontend/: .env  craco.config.js  package.json
frontend/src/: AdminLogin.js  AdminPanel.js  AffiliateDashboard.js  App.css  App.js  BBCStakingInterface.js  BBCStakingProvider.js  BCHAuth.js  BCHWalletManager.js  LoginPage.js  PumpTokenTicker.js  (+5 more)
pi5-complete-package/: file-package-creator.sh  install.sh  quick-deploy.sh
pi5-setup/: README.md  copy-files.sh  troubleshooting.md
solana-staking/: Anchor.toml  Cargo.toml
solana-staking/src/: lib.rs
(+3 files in other folders)
