[package]
name = "bbc-staking"
version = "0.1.0"
description = "BBC Token Staking Contract for Burger Bus Club Membership"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bbc_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"

[dev-dependencies]
anchor-client = "0.29.0"
solana-sdk = "~1.16.0"
tokio = "1.0"